Updating companies.html via Laneworks CMS Publish

--- a/companies.html
+++ b/companies.html
@@ -47,7 +47,7 @@ Pingdom is a service that tracks the uptime, downtime, and performance of websit
 <td align="left" width="80%" style="border-top: 1px solid #CCC; padding-top:18px;">
 <a href="https://pingometer.com/" id="home-logo-link-18847"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/company/logos/Pingometer-Full-Logo.png" width="200" align="left" style="padding: 15px;" /></a>
 <a href="https://pingometer.com/" id="home-name-link-18847" style="color: #000;"><strong>Pingometer</strong></a>
-
+Pingometer is a service that monitors the uptime, downtime, and performance of websites. We offer HTTP, HTTPS, RUM, DNS, ICMP, IMAP, POP3, SMTP, TCP, UDP, and Transaction monitors. We have locations in Australia, Brazil, France, Germany, Luxembourg, Japan, the Netherlands, South Africa, the United Kingdom, and the United States.
 </td>
 <td width="50" align="center" style="border-top: 1px solid #CCC;"><a href="https://pingometer.com/" target="_blank" title="Website" id="home-icon-18847"><img id="home-icon-img-18847" src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-home-icon.jpeg" width="28" align="center" /></a>
 </td>
