Updating companies.html via Laneworks CMS Publish

--- a/companies.html
+++ b/companies.html
@@ -25,6 +25,59 @@ BlazeMeter is a self-service, load testing platform (PaaS) for developers provid
 </tr>
 <tr><td style="height: 18px; border: 1px solid #FFF;" colspan="8"></td></tr><tr>
 <td align="left" width="80%" style="border-top: 1px solid #CCC; padding-top:18px;">
+<a href="https://loadimpact.com/" id="home-logo-link-18849"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/company/logos/load-impact-logo.png" width="200" align="left" style="padding: 15px;" /></a>
+<a href="https://loadimpact.com/" id="home-name-link-18849" style="color: #000;"><strong>Load Impact</strong></a>
+Load Impact is an online load testing service for websites, web apps, mobile apps and APIs. The service allows users to run load tests over the Internet, rather than having to set up their own load testing infrastructure to run tests. Tests are easily repeatable, with minimum preparation required, which also makes the service a good development/optimization tool.
+</td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"><a href="https://loadimpact.com/" target="_blank" title="Website" id="home-icon-18849"><img id="home-icon-img-18849" src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-home-icon.jpeg" width="28" align="center" /></a>
+</td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"><a href="http://blog.loadimpact.com/" target="_blank" title="Blog" id="blog-icon-18849"><img id="blog-icon-img-18849" src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-blog-icon.png" width="28" align="center" /></a>
+</td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"><a href="http://blog.loadimpact.com/feed/" target="_blank" title="Blog RSS" id="blogrss-icon-18849"><img id="blogrss-icon-img-18849" src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-rss-icon.png" width="28" align="center" /></a>
+</td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"><a href="https://twitter.com/loadimpact" target="_blank" title="Twitter" id="twitter-icon-18849"><img id="twitter-icon-img-18849" src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-twitter-icon.png" width="33" align="center" /></a>
+</td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"><a href="https://github.com/loadimpact" target="_blank" title="Github" id="github-icon-18849"><img id="github-icon-img-18849" src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-github-icon.png" width="35" align="center" /></a>
+</td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"></td>
+<td width="150" align="center" id="github-issue-18849" style="font-size: 11px;" style="border-top: 1px solid #CCC;"></td>
+</tr>
+<tr><td style="height: 18px; border: 1px solid #FFF;" colspan="8"></td></tr><tr>
+<td align="left" width="80%" style="border-top: 1px solid #CCC; padding-top:18px;">
+<a href="https://loader.io/" id="home-logo-link-222"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/company/logos/loader-io.png" width="200" align="left" style="padding: 15px;" /></a>
+<a href="https://loader.io/" id="home-name-link-222" style="color: #000;"><strong>loader.io</strong></a>
+Loader.io is a free load testing service that allows you to stress test your web-apps/apis with thousands of concurrent connections. We were born out of SendGrid Labs which is a new and growing internal effort at SendGrid. Born in late 2012, SendGrid Labs builds tools and services to help developers focus on their core business. We aim to provide creative and innovative solutions to common developer pain points, to make their lives easier, and to help them scale.
+</td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"><a href="https://loader.io/" target="_blank" title="Website" id="home-icon-222"><img id="home-icon-img-222" src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-home-icon.jpeg" width="28" align="center" /></a>
+</td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"><a href="http://blog.loader.io/" target="_blank" title="Blog" id="blog-icon-222"><img id="blog-icon-img-222" src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-blog-icon.png" width="28" align="center" /></a>
+</td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"></td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"><a href="https://twitter.com/loaderio" target="_blank" title="Twitter" id="twitter-icon-222"><img id="twitter-icon-img-222" src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-twitter-icon.png" width="33" align="center" /></a>
+</td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"></td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"><a href="http://theapistack.com/data/loaderio/apis.json" target="_blank" title="APIs.json" id="apisjson-icon-222"><img id="apisjson-icon-img-222" src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-api-a.png" width="35" align="center" /></a>
+</td>
+<td width="150" align="center" id="github-issue-222" style="font-size: 11px;" style="border-top: 1px solid #CCC;"></td>
+</tr>
+<tr><td style="height: 18px; border: 1px solid #FFF;" colspan="8"></td></tr><tr>
+<td align="left" width="80%" style="border-top: 1px solid #CCC; padding-top:18px;">
+<a href="https://loadfocus.com/" id="home-logo-link-18901"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/company/logos/loadfocus.png" width="200" align="left" style="padding: 15px;" /></a>
+<a href="https://loadfocus.com/" id="home-name-link-18901" style="color: #000;"><strong>LoadFocus</strong></a>
+Load test with thousands of concurrent users. Monitor website uptime and perfomance. Measure website speed and get insights. Run load tests in the Cloud and stress your API with up to 50,000 concurrent users. Inspect results to optimise and improve performance.
+</td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"><a href="https://loadfocus.com/" target="_blank" title="Website" id="home-icon-18901"><img id="home-icon-img-18901" src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-home-icon.jpeg" width="28" align="center" /></a>
+</td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"><a href="http://loadfocus.com/blog/" target="_blank" title="Blog" id="blog-icon-18901"><img id="blog-icon-img-18901" src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-blog-icon.png" width="28" align="center" /></a>
+</td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"></td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"></td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"></td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"></td>
+<td width="150" align="center" id="github-issue-18901" style="font-size: 11px;" style="border-top: 1px solid #CCC;"></td>
+</tr>
+<tr><td style="height: 18px; border: 1px solid #FFF;" colspan="8"></td></tr><tr>
+<td align="left" width="80%" style="border-top: 1px solid #CCC; padding-top:18px;">
 <a href="http://www.pingdom.com" id="home-logo-link-456"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/company/456_logo.png" width="200" align="left" style="padding: 15px;" /></a>
 <a href="http://www.pingdom.com" id="home-name-link-456" style="color: #000;"><strong>Pingdom</strong></a>
 Pingdom is a service that tracks the uptime, downtime, and performance of websites.  When problems happen with a site that Pingdom monitors, it immediately alerts the owner so the problem can be taken care of. Pingdom monitors websites from multiple locations globally so that it can distinguish genuine downtime from routing and access problems. 
@@ -60,5 +113,24 @@ Pingometer is a service that monitors the uptime, downtime, and performance of w
 </td>
 <td width="50" align="center" style="border-top: 1px solid #CCC;"></td>
 <td width="150" align="center" id="github-issue-18847" style="font-size: 11px;" style="border-top: 1px solid #CCC;"></td>
+</tr>
+<tr><td style="height: 18px; border: 1px solid #FFF;" colspan="8"></td></tr><tr>
+<td align="left" width="80%" style="border-top: 1px solid #CCC; padding-top:18px;">
+<a href="http://smartbear.com/" id="home-logo-link-1157"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/company/SmartBear-Logo.png" width="200" align="left" style="padding: 15px;" /></a>
+<a href="http://smartbear.com/" id="home-name-link-1157" style="color: #000;"><strong>SmartBear Software</strong></a>
+SmartBear Software provides tools for over 100,000 software professionals to build, test, and monitor some of the best software applications and websites anywhere on the desktop, mobile and in the cloud.
+</td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"><a href="http://smartbear.com/" target="_blank" title="Website" id="home-icon-1157"><img id="home-icon-img-1157" src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-home-icon.jpeg" width="28" align="center" /></a>
+</td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"><a href="http://blog.smartbear.com/" target="_blank" title="Blog" id="blog-icon-1157"><img id="blog-icon-img-1157" src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-blog-icon.png" width="28" align="center" /></a>
+</td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"><a href="http://feeds.feedburner.com/smartbear" target="_blank" title="Blog RSS" id="blogrss-icon-1157"><img id="blogrss-icon-img-1157" src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-rss-icon.png" width="28" align="center" /></a>
+</td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"><a href="https://twitter.com/smartbear" target="_blank" title="Twitter" id="twitter-icon-1157"><img id="twitter-icon-img-1157" src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-twitter-icon.png" width="33" align="center" /></a>
+</td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"><a href="https://github.com/SmartBear" target="_blank" title="Github" id="github-icon-1157"><img id="github-icon-img-1157" src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-github-icon.png" width="35" align="center" /></a>
+</td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"></td>
+<td width="150" align="center" id="github-issue-1157" style="font-size: 11px;" style="border-top: 1px solid #CCC;"></td>
 </tr>
 <tr><td style="height: 18px; border: 1px solid #FFF;" colspan="8"></td></tr><tr><td style="height: 18px; border-bottom: 1px solid #CCC;" colspan="8"></td></tr></table>
