Updating building-blocks.html via Laneworks CMS Publish

--- a/building-blocks.html
+++ b/building-blocks.html
@@ -2,7 +2,7 @@
 layout: page
 title: 'Building Blocks'
 ---
-<p>These are the common building blocks I have pullled from my research so far.
+<p>These are some of the common building blocks I have pullled from my research into this layer of the API space.</p>
 <table width="100%" border="0"><tr>
 <td align="left" valign="top" style="padding-left:10px; padding-bottom:5px; background-color: #E0E0E0;">
 <h2>Core Performance</h2>
@@ -15,7 +15,7 @@ title: 'Building Blocks'
 <li><strong>Memory Usage</strong> - Allow for the monitoring of memory usage.</li>
 <li><strong>Disk I/O</strong> - Allow for the monitoring of disk I/O.</li>
 <li><strong>Network I/O</strong> - Allow for the monitoring of network I/O.</li>
-<li><strong>Request Editor</strong> - <p>Being able to edit the request being made.</p></li>
+<li><strong>Request Editor</strong> - Being able to edit the request being made.</li>
 <li><strong>Request Retry</strong> - Allow the retry of any performance test.</li>
 <li><strong>Request Sharing</strong> - Enable the sharing of performance tests.</li>
 <li><strong>Request Playback</strong> - Enable the playback of any performance test.</li>
