Updating companies.html via Laneworks CMS Publish

--- a/companies.html
+++ b/companies.html
@@ -25,6 +25,44 @@ BlazeMeter is a self-service, load testing platform (PaaS) for developers provid
 </tr>
 <tr><td style="height: 18px; border: 1px solid #FFF;" colspan="8"></td></tr><tr>
 <td align="left" width="80%" style="border-top: 1px solid #CCC; padding-top:18px;">
+<a href="http://www.catchpoint.com" id="home-logo-link-726"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/company/726_logo.jpg" width="200" align="left" style="padding: 15px;" /></a>
+<a href="http://www.catchpoint.com" id="home-name-link-726" style="color: #000;"><strong>Catchpoint</strong></a>
+
+</td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"><a href="http://www.catchpoint.com" target="_blank" title="Website" id="home-icon-726"><img id="home-icon-img-726" src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-home-icon.jpeg" width="28" align="center" /></a>
+</td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"><a href="http://blog.catchpoint.com" target="_blank" title="Blog" id="blog-icon-726"><img id="blog-icon-img-726" src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-blog-icon.png" width="28" align="center" /></a>
+</td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"><a href="http://blog.catchpoint.com/feed/" target="_blank" title="Blog RSS" id="blogrss-icon-726"><img id="blogrss-icon-img-726" src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-rss-icon.png" width="28" align="center" /></a>
+</td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"><a href="https://twitter.com/catchpoint" target="_blank" title="Twitter" id="twitter-icon-726"><img id="twitter-icon-img-726" src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-twitter-icon.png" width="33" align="center" /></a>
+</td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"><a href="https://github.com/catchpoint" target="_blank" title="Github" id="github-icon-726"><img id="github-icon-img-726" src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-github-icon.png" width="35" align="center" /></a>
+</td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"></td>
+<td width="150" align="center" id="github-issue-726" style="font-size: 11px;" style="border-top: 1px solid #CCC;"></td>
+</tr>
+<tr><td style="height: 18px; border: 1px solid #FFF;" colspan="8"></td></tr><tr>
+<td align="left" width="80%" style="border-top: 1px solid #CCC; padding-top:18px;">
+<a href="http://crossbrowsertesting.com" id="home-logo-link-1043"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/company/logos/cbt-logo.png" width="200" align="left" style="padding: 15px;" /></a>
+<a href="http://crossbrowsertesting.com" id="home-name-link-1043" style="color: #000;"><strong>CrossBrowserTesting</strong></a>
+
+</td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"><a href="http://crossbrowsertesting.com" target="_blank" title="Website" id="home-icon-1043"><img id="home-icon-img-1043" src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-home-icon.jpeg" width="28" align="center" /></a>
+</td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"><a href="http://crossbrowsertesting.com/blog" target="_blank" title="Blog" id="blog-icon-1043"><img id="blog-icon-img-1043" src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-blog-icon.png" width="28" align="center" /></a>
+</td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"><a href="view-source:http://crossbrowsertesting.com/blog/feed" target="_blank" title="Blog RSS" id="blogrss-icon-1043"><img id="blogrss-icon-img-1043" src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-rss-icon.png" width="28" align="center" /></a>
+</td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"><a href="https://twitter.com/xbrowsertesting" target="_blank" title="Twitter" id="twitter-icon-1043"><img id="twitter-icon-img-1043" src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-twitter-icon.png" width="33" align="center" /></a>
+</td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"></td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"><a href="http://theapistack.com/data/crossbrowsertesting/apis.json" target="_blank" title="APIs.json" id="apisjson-icon-1043"><img id="apisjson-icon-img-1043" src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-api-a.png" width="35" align="center" /></a>
+</td>
+<td width="150" align="center" id="github-issue-1043" style="font-size: 11px;" style="border-top: 1px solid #CCC;"></td>
+</tr>
+<tr><td style="height: 18px; border: 1px solid #FFF;" colspan="8"></td></tr><tr>
+<td align="left" width="80%" style="border-top: 1px solid #CCC; padding-top:18px;">
 <a href="https://loadimpact.com/" id="home-logo-link-18849"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/company/logos/load-impact-logo.png" width="200" align="left" style="padding: 15px;" /></a>
 <a href="https://loadimpact.com/" id="home-name-link-18849" style="color: #000;"><strong>Load Impact</strong></a>
 Load Impact is an online load testing service for websites, web apps, mobile apps and APIs. The service allows users to run load tests over the Internet, rather than having to set up their own load testing infrastructure to run tests. Tests are easily repeatable, with minimum preparation required, which also makes the service a good development/optimization tool.
@@ -132,5 +170,39 @@ SmartBear Software provides tools for over 100,000 software professionals to bui
 </td>
 <td width="50" align="center" style="border-top: 1px solid #CCC;"></td>
 <td width="150" align="center" id="github-issue-1157" style="font-size: 11px;" style="border-top: 1px solid #CCC;"></td>
+</tr>
+<tr><td style="height: 18px; border: 1px solid #FFF;" colspan="8"></td></tr><tr>
+<td align="left" width="80%" style="border-top: 1px solid #CCC; padding-top:18px;">
+<a href="https://testflightapp.com/api/doc/" id="home-logo-link-1178"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/company/1178_logo.png" width="200" align="left" style="padding: 15px;" /></a>
+<a href="https://testflightapp.com/api/doc/" id="home-name-link-1178" style="color: #000;"><strong>TestFlight</strong></a>
+
+</td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"><a href="https://testflightapp.com/api/doc/" target="_blank" title="Website" id="home-icon-1178"><img id="home-icon-img-1178" src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-home-icon.jpeg" width="28" align="center" /></a>
+</td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"><a href="http://blog.testflightapp.com/" target="_blank" title="Blog" id="blog-icon-1178"><img id="blog-icon-img-1178" src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-blog-icon.png" width="28" align="center" /></a>
+</td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"><a href="http://blog.testflightapp.com/rss" target="_blank" title="Blog RSS" id="blogrss-icon-1178"><img id="blogrss-icon-img-1178" src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-rss-icon.png" width="28" align="center" /></a>
+</td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"><a href="https://twitter.com/#!/testflightapp" target="_blank" title="Twitter" id="twitter-icon-1178"><img id="twitter-icon-img-1178" src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-twitter-icon.png" width="33" align="center" /></a>
+</td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"><a href="https://github.com/testflight" target="_blank" title="Github" id="github-icon-1178"><img id="github-icon-img-1178" src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-github-icon.png" width="35" align="center" /></a>
+</td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"></td>
+<td width="150" align="center" id="github-issue-1178" style="font-size: 11px;" style="border-top: 1px solid #CCC;"></td>
+</tr>
+<tr><td style="height: 18px; border: 1px solid #FFF;" colspan="8"></td></tr><tr>
+<td align="left" width="80%" style="border-top: 1px solid #CCC; padding-top:18px;">
+<a href="https://sites.google.com/a/webpagetest.org/docs/advanced-features/webpagetest-restful-apis" id="home-logo-link-1216"><img src="" width="200" align="left" style="padding: 15px;" /></a>
+<a href="https://sites.google.com/a/webpagetest.org/docs/advanced-features/webpagetest-restful-apis" id="home-name-link-1216" style="color: #000;"><strong>WebPagetest</strong></a>
+
+</td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"><a href="https://sites.google.com/a/webpagetest.org/docs/advanced-features/webpagetest-restful-apis" target="_blank" title="Website" id="home-icon-1216"><img id="home-icon-img-1216" src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-home-icon.jpeg" width="28" align="center" /></a>
+</td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"></td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"></td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"></td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"></td>
+<td width="50" align="center" style="border-top: 1px solid #CCC;"></td>
+<td width="150" align="center" id="github-issue-1216" style="font-size: 11px;" style="border-top: 1px solid #CCC;"></td>
 </tr>
 <tr><td style="height: 18px; border: 1px solid #FFF;" colspan="8"></td></tr><tr><td style="height: 18px; border-bottom: 1px solid #CCC;" colspan="8"></td></tr></table>
