Updating _posts/2016-01-27-why-api-performance-matters-and-what-to-do-about-it.html via Laneworks Publish

--- a/_posts/2016-01-27-why-api-performance-matters-and-what-to-do-about-it.html
+++ b/_posts/2016-01-27-why-api-performance-matters-and-what-to-do-about-it.html
@@ -1,8 +1,7 @@
 ---
-layout: post
+layout: redirect
 title: 'Why API Performance Matters (And What to Do About It)'
 source: http://blog.smartbear.com/api-testing/why-api-performance-matters/
 domain: blog.smartbear.com
 image: 
 ---
-
