--- a/organizations/index.html
+++ b/organizations/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: [Name]
+title: Organizations
 ---
 
 <table width="100%" border="0" cellpadding="3" cellspacing="2"><tr>
@@ -118,7 +118,7 @@ Load test with thousands of concurrent users. Monitor website uptime and perfoma
 <td align="left" width="80%" style="border-top: 1px solid #CCC; padding-top:18px;">
 <a href="http://www.pingdom.com" id="home-logo-link-456"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/company/456_logo.png" width="200" align="left" style="padding: 15px;" /></a>
 <a href="http://www.pingdom.com" id="home-name-link-456" style="color: #000;"><strong>Pingdom</strong></a>
-Pingdom is a service that tracks the uptime, downtime, and performance of websites.  When problems happen with a site that Pingdom monitors, it immediately alerts the owner so the problem can be taken care of. Pingdom monitors websites from multiple locations globally so that it can distinguish genuine downtime from routing and access problems. 
+Pingdom is a service that tracks the uptime, downtime, and performance of websites.  When problems happen with a site that Pingdom monitors, it immediately alerts the owner so the problem can be taken care of. Pingdom monitors websites from multiple locations globally so that it can distinguish genuine downtime from routing and access problems.
 </td>
 <td width="50" align="center" style="border-top: 1px solid #CCC;"><a href="http://www.pingdom.com" target="_blank" title="Website" id="home-icon-456"><img id="home-icon-img-456" src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-home-icon.jpeg" width="28" align="center" /></a>
 </td>
