Updating _posts/2016-03-24-api-speed-and-performance-a-guide-to-staying-in-front-of-api-performance-problems.html via Laneworks Publish

--- a/_posts/2016-03-24-api-speed-and-performance-a-guide-to-staying-in-front-of-api-performance-problems.html
+++ b/_posts/2016-03-24-api-speed-and-performance-a-guide-to-staying-in-front-of-api-performance-problems.html
@@ -1,7 +1,7 @@
 ---
 layout: redirect
-title: 'API Speed and Performance: A Guide to Staying in Front of API Performance Problems'
-source: https://dzone.com/articles/api-speed-and-performance-a-guide-to-staying-in-fr?utm_medium=feed&utm_source=feedpress.me&utm_campaign=Feed%3A+dzone
-domain: dzone.com
+title: 'API Speed and Performance: A Guide to Staying In Front of API Performance Problems'
+source: http://blog.smartbear.com/api-testing/api-performance-problems/
+domain: blog.smartbear.com
 image: 
 ---
