--- a/index.html
+++ b/index.html
@@ -257,11 +257,11 @@ title: API Evangelist - Performance
 <section id="banner">
 	<div class="content">
 		<header>
-			<h2>{{ home_content.title }}</h2>
+			<h2>{{ about_content.title }}</h2>
 		</header>
-		{{ home_content.content }}
+		{{ about_content.content }}
 	</div>
 	<span class="image object">
-		<img src="{{ home_content.image }}" alt="" width="25%" />
+		<img src="{{ about_content.image }}" alt="" width="25%" />
 	</span>
 </section>
